<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_meeting"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".ui.AddMeetingActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingBottom="16dp"
        app:layout_constraintBottom_toTopOf="@id/create"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/meeting_create_lyt"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="68dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:gravity="center"
                    android:text="@string/create_meeting_activity_title"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/meeting_create_lyt" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/meeting_subject_lyt"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="68dp"
                android:layout_marginTop="12dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/meeting_create_lyt">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/meeting_subject"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:ems="10"
                    android:hint="@string/meeting_subject_hint"
                    android:inputType="textEmailSubject" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:id="@+id/date_and_time_lyt"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:weightSum="2"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/meeting_subject_lyt">


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/meeting_date_lyt"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_marginTop="12dp"
                    android:clickable="false"
                    android:focusable="false"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/date_and_time_lyt">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/meeting_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableRight="@drawable/ic_edit_calendar_24"
                        android:focusable="false"
                        android:hint="@string/date_meeting_hint" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/meeting_time_lyt"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="0dp"
                    android:clickable="false"
                    android:focusable="false"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/meeting_date_lyt">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/meeting_time"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableRight="@drawable/ic_time_24"
                        android:focusable="false"
                        android:hint="@string/duration_meeting_hint" />

                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/meeting_duration_lyt"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="68dp"
                android:layout_marginTop="12dp"
                android:focusable="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/date_and_time_lyt">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/meeting_duration"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:ems="10"
                    android:focusable="false"
                    android:hint="@string/duration_meeting_input" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/meeting_duration_spinner"
                android:layout_width="222dp"
                android:layout_height="75dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="12dp"
                android:spinnerMode="dropdown"
                app:layout_constraintEnd_toEndOf="@+id/meeting_duration_lyt"
                app:layout_constraintTop_toTopOf="@id/meeting_duration_lyt" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/meeting_room_name_lyt"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="68dp"
                android:layout_marginTop="12dp"
                android:focusable="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/meeting_duration_lyt">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/meeting_room_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:ems="10"
                    android:focusable="false"
                    android:hint="@string/room_meeting_spinner" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/meeting_room_spinner"
                android:layout_width="222dp"
                android:layout_height="75dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="12dp"
                android:spinnerMode="dialog"
                app:layout_constraintEnd_toEndOf="@+id/meeting_room_name_lyt"
                app:layout_constraintTop_toTopOf="@id/meeting_room_name_lyt" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/meeting_participants_lyt"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="12dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/meeting_room_name_lyt">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/meeting_participants"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/participants_meeting_hint"
                    android:inputType="textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chip_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="@+id/meeting_participants_lyt"
                app:layout_constraintStart_toStartOf="@+id/meeting_participants_lyt"
                app:layout_constraintTop_toBottomOf="@id/meeting_participants_lyt" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <Button
        android:id="@+id/create"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:clickable="false"
        android:elevation="15dp"
        android:enabled="false"
        android:text="@string/create_meeting_button"
        android:textColor="@color/black"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>