<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_mareu"
        android:orderInCategory="0"
        app:showAsAction="ifRoom"
        android:title="@string/filtres"
        android:icon="@drawable/ic_baseline_menu_24">

        <menu>
            <item
                android:id="@+id/Filter_date"
                android:title="@string/filter_by_date" />
            <item
                android:id="@+id/Filter_room"
                android:title="@string/filter_by_meetingroom"/>
            <item
                android:id="@+id/Reset_Filtre"
                android:title="@string/reset_filter"/>

        </menu>
    </item>
</menu>