<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_list_meeting"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ui.MeetingListActivity">


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_meeting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:listitem="@layout/item_meeting"/>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/create_meeting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="25dp"
        android:clickable="true"
        android:focusable="true"
        android:backgroundTint="@color/white"
        android:src="@drawable/ic_add_meeting_24"
        app:tint="@null" />

</RelativeLayout>